2021-03-23  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

        * coders/msl.c (ProcessMSLScript): Fix oss-fuzz 32263
        "graphicsmagick:coder_MSL_fuzzer: Heap-use-after-free in
        ProcessMSLScript".

2021-03-18  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

        * Magick++/lib/Image.cpp (Magick::Image::write): Due to the design
        of ImageToBlob(), it is possible for data to be returned although
        an exception was thrown.  Deposit it in the Blob so that it will
        be freed.  May finish fixing oss-fuzz 31965
        "graphicsmagick:coder_MSL_fuzzer: Indirect-leak in MagickMalloc".

2021-03-17  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

        * coders/msl.c (ProcessMSLScript): Attempt to address leak of
        "msl_image".  May fix oss-fuzz 31965
        "graphicsmagick:coder_MSL_fuzzer: Indirect-leak in MagickMalloc".

2021-03-13  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

        * coders/dcm.c (DCM_ReadNonNativeImages): Enforce that image depth
        is in the supported range of 1-16.  Embedded PGX was observed to
        cause JasPer to report a component depth of 20 bits.  Fixes
        oss-fuzz issue 31373 "graphicsmagick:coder_DCM_fuzzer:
        Heap-buffer-overflow in DCM_SetupRescaleMap".

2021-03-10  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

        * coders/svg.c (SVGError): Force xml parser input state to
        XML_PARSER_EOF state upon error to abort parsing.

        * coders/msl.c (MSLError): Force xml parser input state to
        XML_PARSER_EOF state upon error to abort parsing.  Fixes oss-fuzz
        31401 "graphicsmagick:coder_MSL_fuzzer: Timeout in
        coder_MSL_fuzzer".

2021-03-08  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

        * coders/msl.c (ProcessMSLScript): Replicate clean-up actions
        which should already be done by MSLPopImage().  Trying to address
        oss-fuzz 31259 "graphicsmagick:coder_MSL_fuzzer: Direct-leak in