@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020210323"
-#define public MagickPackageReleaseDate "snapshot-20210323"
+#define public MagickPackageVersionAddendum ".020210324"
+#define public MagickPackageReleaseDate "snapshot-20210324"
