@@ -35,6 +35,12 @@
 <div class="document">
 
 
+<p>2021-03-24  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
+<blockquote>
+* coders/msl.c (ProcessMSLScript): Another attempt to properly fix
+oss-fuzz 32263 &quot;graphicsmagick:coder_MSL_fuzzer:
+Heap-use-after-free in ProcessMSLScript&quot; without causing new
+problems.</blockquote>
 <p>2021-03-23  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 * coders/msl.c (ProcessMSLScript): Fix oss-fuzz 32263
