@@ -1,3 +1,10 @@
+2021-03-24  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+
+        * coders/msl.c (ProcessMSLScript): Another attempt to properly fix
+        oss-fuzz 32263 "graphicsmagick:coder_MSL_fuzzer:
+        Heap-use-after-free in ProcessMSLScript" without causing new
+        problems.
+
 2021-03-23  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
         * coders/msl.c (ProcessMSLScript): Fix oss-fuzz 32263
